# fruid

./: Cargo.toml  LICENSE  Makefile.toml  README.md
cli/: Cargo.toml
cli/src/: from_cli.rs  lib.rs  prompt.rs
iced/: Cargo.toml
iced/src/: lib.rs  widgets.rs
macros/: Cargo.toml
macros/src/: cli_input.rs  lib.rs  parsed_field.rs  utils.rs
src/: lib.rs
