[workspace]
resolver = "2"

members = [
    ".", "macros", "cli"
]

[package]
name = "fruid"
version = "0.0.1"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"


[features]
default = ["cli"]
cli = ["console", "dialoguer", "indicatif"]
gui = []

[dependencies]
serde = "1.0.136"
fruid_macros = { path = "macros" }
console = { version = "0.14.1", optional = true}
dialoguer = { version = "0.8.0", optional = true}
indicatif = { version = "0.16.2", optional = true}