[workspace]
resolver = "2"

members = [
    ".", "macros", "cli", "iced"
]

[package]
name = "fruid"
version = "0.0.1"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"


[features]
default = ["cli"]
cli = ["fruid_cli"]
iced = ["fruid_iced"]

[dependencies]
serde = "1.0.136"
fruid_macros = { path = "macros" }
fruid_cli = { path = "cli", optional = true}
fruid_iced = { path = "iced", optional = true}